--- a/Data_Validation/pydantic_validation.ipynb
+++ b/Data_Validation/pydantic_validation.ipynb
@@ -59,6 +59,24 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "5af54538",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(\"25\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "980bf856",
    "metadata": {},
    "outputs": [
@@ -73,13 +91,13 @@
    "source": [
     "# Automatic type conversion   \n",
     "user2 = User(name=\"Bob\", age=\"25\", email=\"bob@example.com\")  # age is string\n",
-    "print(user2.age, type(user2.age))\n",
+    "print(user2.age, type(user2.age)) # this is the we accessing the class variabe\n",
     "# Output: 25 <class 'int'>  # Automatically converted!\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "83f9ce2a",
    "metadata": {},
    "outputs": [
@@ -89,7 +107,7 @@
      "text": [
       "Error: 1 validation error for User\n",
       "age\n",
-      "  Input should be a valid integer, unable to parse string as an integer [type=int_parsing, input_value='not a number', input_type=str]\n",
+      "  Input should be a valid integer, unable to parse string as an integer [type=int_parsing, input_value='gjiji', input_type=str]\n",
       "    For further information visit https://errors.pydantic.dev/2.11/v/int_parsing\n"
      ]
     }
@@ -97,7 +115,7 @@
    "source": [
     "# Invalid data - raises ValidationError\n",
     "try:\n",
-    "    user3 = User(name=\"Charlie\", age=\"not a number\", email=\"charlie@example.com\")\n",
+    "    user3 = User(name=\"Charlie\", age=\"gjiji\", email=\"charlie@example.com\")\n",
     "except Exception as e:\n",
     "    print(f\"Error: {e}\")\n",
     "# Output: Error showing age validation failed"
@@ -145,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "b64d45a7",
    "metadata": {},
    "outputs": [
@@ -177,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "8bcb7f00",
    "metadata": {},
    "outputs": [
@@ -185,6 +203,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "name='Mouse' price=25.5 quantity=0 discount=0.0\n",
       "0\n"
      ]
     }
@@ -192,13 +211,36 @@
    "source": [
     "# Default values work\n",
     "product2 = Product(name=\"Mouse\", price=25.50)\n",
-    "print(product2.quantity)  # Output: 0\n",
-    "\n"
+    "print(product2)\n",
+    "print(product2.quantity)  # Output: 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
+   "id": "3d81317b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValidationError",
+     "evalue": "2 validation errors for Product\nname\n  String should have at least 1 character [type=string_too_short, input_value='', input_type=str]\n    For further information visit https://errors.pydantic.dev/2.11/v/string_too_short\nprice\n  Input should be greater than 0 [type=greater_than, input_value=-10, input_type=int]\n    For further information visit https://errors.pydantic.dev/2.11/v/greater_than",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValidationError\u001b[39m                           Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m product3 = \u001b[43mProduct\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprice\u001b[49m\u001b[43m=\u001b[49m\u001b[43m-\u001b[49m\u001b[32;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mquantity\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m5\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32md:\\Cewai\\CrewAI_Crash_Course_Youtube\\crewai-course\\Lib\\site-packages\\pydantic\\main.py:253\u001b[39m, in \u001b[36mBaseModel.__init__\u001b[39m\u001b[34m(self, **data)\u001b[39m\n\u001b[32m    251\u001b[39m \u001b[38;5;66;03m# `__tracebackhide__` tells pytest and some other tools to omit this function from tracebacks\u001b[39;00m\n\u001b[32m    252\u001b[39m __tracebackhide__ = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m253\u001b[39m validated_self = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m__pydantic_validator__\u001b[49m\u001b[43m.\u001b[49m\u001b[43mvalidate_python\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mself_instance\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    254\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m validated_self:\n\u001b[32m    255\u001b[39m     warnings.warn(\n\u001b[32m    256\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mA custom validator is returning a value other than `self`.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m'\u001b[39m\n\u001b[32m    257\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mReturning anything other than `self` from a top level model validator isn\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt supported when validating via `__init__`.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    258\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mSee the `model_validator` docs (https://docs.pydantic.dev/latest/concepts/validators/#model-validators) for more details.\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m    259\u001b[39m         stacklevel=\u001b[32m2\u001b[39m,\n\u001b[32m    260\u001b[39m     )\n",
+      "\u001b[31mValidationError\u001b[39m: 2 validation errors for Product\nname\n  String should have at least 1 character [type=string_too_short, input_value='', input_type=str]\n    For further information visit https://errors.pydantic.dev/2.11/v/string_too_short\nprice\n  Input should be greater than 0 [type=greater_than, input_value=-10, input_type=int]\n    For further information visit https://errors.pydantic.dev/2.11/v/greater_than"
+     ]
+    }
+   ],
+   "source": [
+    "product3 = Product(name=\"\", price=-10, quantity=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "fbac2b2b",
    "metadata": {},
    "outputs": [
@@ -238,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "efb5041a",
    "metadata": {},
    "outputs": [
@@ -269,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "cf7fbd95",
    "metadata": {},
    "outputs": [
@@ -288,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "971984f7",
    "metadata": {},
    "outputs": [
@@ -307,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "d304c3f3",
    "metadata": {},
    "outputs": [],
@@ -332,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "7fde66f3",
    "metadata": {},
    "outputs": [],
@@ -352,29 +394,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "8caa33ee",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: status must be one of: pending, shipped, delivered, cancelled\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Invalid - wrong value\n",
     "try:\n",
-    "    order3 = Order(status=\"processing\", priority=\"high\", payment_method=\"paypal\")\n",
+    "    order3 = Order(status=\"pending\", priority=\"high\", payment_method=\"paypal\")\n",
     "except Exception as e:\n",
     "    print(\"Error: status must be one of: pending, shipped, delivered, cancelled\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "f2a849f2",
    "metadata": {},
    "outputs": [
@@ -418,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "1cda5174",
    "metadata": {},
    "outputs": [],
@@ -439,30 +473,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "0e07e108",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValidationError",
-     "evalue": "2 validation errors for FlexibleConfig\ntimeout.int\n  Input should be a valid integer, unable to parse string as an integer [type=int_parsing, input_value='nithish', input_type=str]\n    For further information visit https://errors.pydantic.dev/2.11/v/int_parsing\ntimeout.float\n  Input should be a valid number, unable to parse string as a number [type=float_parsing, input_value='nithish', input_type=str]\n    For further information visit https://errors.pydantic.dev/2.11/v/float_parsing",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValidationError\u001b[39m                           Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m config3 = \u001b[43mFlexibleConfig\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mnithish\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretry\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m=\u001b[49m\u001b[43m{\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mkey\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mvalue\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32md:\\CREWAI_CRASH_COURSE\\crewai-course\\Lib\\site-packages\\pydantic\\main.py:253\u001b[39m, in \u001b[36mBaseModel.__init__\u001b[39m\u001b[34m(self, **data)\u001b[39m\n\u001b[32m    251\u001b[39m \u001b[38;5;66;03m# `__tracebackhide__` tells pytest and some other tools to omit this function from tracebacks\u001b[39;00m\n\u001b[32m    252\u001b[39m __tracebackhide__ = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m253\u001b[39m validated_self = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m__pydantic_validator__\u001b[49m\u001b[43m.\u001b[49m\u001b[43mvalidate_python\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mself_instance\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    254\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m validated_self:\n\u001b[32m    255\u001b[39m     warnings.warn(\n\u001b[32m    256\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mA custom validator is returning a value other than `self`.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m'\u001b[39m\n\u001b[32m    257\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mReturning anything other than `self` from a top level model validator isn\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt supported when validating via `__init__`.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    258\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mSee the `model_validator` docs (https://docs.pydantic.dev/latest/concepts/validators/#model-validators) for more details.\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m    259\u001b[39m         stacklevel=\u001b[32m2\u001b[39m,\n\u001b[32m    260\u001b[39m     )\n",
-      "\u001b[31mValidationError\u001b[39m: 2 validation errors for FlexibleConfig\ntimeout.int\n  Input should be a valid integer, unable to parse string as an integer [type=int_parsing, input_value='nithish', input_type=str]\n    For further information visit https://errors.pydantic.dev/2.11/v/int_parsing\ntimeout.float\n  Input should be a valid number, unable to parse string as a number [type=float_parsing, input_value='nithish', input_type=str]\n    For further information visit https://errors.pydantic.dev/2.11/v/float_parsing"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "config3 = FlexibleConfig(timeout=\"nithish\", retry=False, data={\"key\": \"value\"})"
+    "config3 = FlexibleConfig(timeout=12, retry=False, data={\"key\": \"value\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "id": "05a8750c",
    "metadata": {},
    "outputs": [
@@ -482,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "455c5dd9",
    "metadata": {},
    "outputs": [],
@@ -497,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "id": "d4f7aff2",
    "metadata": {},
    "outputs": [
@@ -536,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "id": "baf99a6d",
    "metadata": {},
    "outputs": [],
@@ -549,6 +570,7 @@
     "    username: str = Field(..., min_length=3, max_length=20)\n",
     "    \n",
     "    # New way with Annotated - cleaner!\n",
+    "    #Annotated[Type,metadat1,metadat2,...]\n",
     "    email: Annotated[str, Field(..., pattern=r'^[\\w\\.-]+@[\\w\\.-]+\\.\\w+$')]\n",
     "    age: Annotated[int, Field(..., ge=18, le=120)]\n",
     "    score: Annotated[float, Field(..., ge=0.0, le=100.0)]\n",
@@ -563,35 +585,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "id": "3c1257d2",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValidationError",
-     "evalue": "1 validation error for User\nage\n  Input should be greater than or equal to 18 [type=greater_than_equal, input_value=15, input_type=int]\n    For further information visit https://errors.pydantic.dev/2.11/v/greater_than_equal",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValidationError\u001b[39m                           Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m user1 = \u001b[43mUser\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      2\u001b[39m \u001b[43m    \u001b[49m\u001b[43musername\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43malice\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[43m    \u001b[49m\u001b[43memail\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43malice@example.com\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m    \u001b[49m\u001b[43mage\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m15\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m    \u001b[49m\u001b[43mscore\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m95.5\u001b[39;49m\n\u001b[32m      6\u001b[39m \u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32md:\\CREWAI_CRASH_COURSE\\crewai-course\\Lib\\site-packages\\pydantic\\main.py:253\u001b[39m, in \u001b[36mBaseModel.__init__\u001b[39m\u001b[34m(self, **data)\u001b[39m\n\u001b[32m    251\u001b[39m \u001b[38;5;66;03m# `__tracebackhide__` tells pytest and some other tools to omit this function from tracebacks\u001b[39;00m\n\u001b[32m    252\u001b[39m __tracebackhide__ = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m253\u001b[39m validated_self = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m__pydantic_validator__\u001b[49m\u001b[43m.\u001b[49m\u001b[43mvalidate_python\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mself_instance\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    254\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m validated_self:\n\u001b[32m    255\u001b[39m     warnings.warn(\n\u001b[32m    256\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mA custom validator is returning a value other than `self`.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m'\u001b[39m\n\u001b[32m    257\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mReturning anything other than `self` from a top level model validator isn\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt supported when validating via `__init__`.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    258\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mSee the `model_validator` docs (https://docs.pydantic.dev/latest/concepts/validators/#model-validators) for more details.\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m    259\u001b[39m         stacklevel=\u001b[32m2\u001b[39m,\n\u001b[32m    260\u001b[39m     )\n",
-      "\u001b[31mValidationError\u001b[39m: 1 validation error for User\nage\n  Input should be greater than or equal to 18 [type=greater_than_equal, input_value=15, input_type=int]\n    For further information visit https://errors.pydantic.dev/2.11/v/greater_than_equal"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "user1 = User(\n",
     "    username=\"alice\",\n",
     "    email=\"alice@example.com\",\n",
-    "    age=15,\n",
+    "    age=23,\n",
     "    score=95.5\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "id": "5a04ae4a",
    "metadata": {},
    "outputs": [],
@@ -658,7 +667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
