--- a/Async_introduction/unpack.ipynb
+++ b/Async_introduction/unpack.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d1be1040",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5e1e70cf",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "print(*list1)"
+    "print(*list1) # unpacking"
    ]
   },
   {
@@ -71,7 +71,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
