--- a/Tasks/task4.ipynb
+++ b/Tasks/task4.ipynb
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "f82c28b6",
    "metadata": {},
    "outputs": [],
@@ -286,7 +286,7 @@
     "    ],\n",
     "    process=Process.sequential,\n",
     "    verbose=True\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -3104,7 +3104,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "crewai-course",
+   "display_name": "crewai-course (3.12.10)",
    "language": "python",
    "name": "python3"
   },
@@ -3118,7 +3118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
