--- a/Tasks/task5.ipynb
+++ b/Tasks/task5.ipynb
@@ -621,7 +621,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "crewai-course",
+   "display_name": "crewai-course (3.12.10)",
    "language": "python",
    "name": "python3"
   },
