--- a/Tasks/task6.ipynb
+++ b/Tasks/task6.ipynb
@@ -1568,7 +1568,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "crewai-course",
+   "display_name": "crewai-course (3.12.10)",
    "language": "python",
    "name": "python3"
   },
