--- a/Tasks/task8.ipynb
+++ b/Tasks/task8.ipynb
@@ -495,7 +495,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "crewai-course",
+   "display_name": "crewai-course (3.12.2)",
    "language": "python",
    "name": "python3"
   },
@@ -509,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
