--- a/Crewai_Advanced_concept/crew_kickoff_each.ipynb
+++ b/Crewai_Advanced_concept/crew_kickoff_each.ipynb
@@ -31,7 +31,7 @@
     "from dotenv import load_dotenv\n",
     "load_dotenv()\n",
     "\n",
-    "from crewai import Crew,Agent,Task,LLMs"
+    "from crewai import Crew,Agent,Task,LLM"
    ]
   },
   {
